# dev-sandbox

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  build.sh  readme.md
.github/workflows/: lint-and-build.yml  push-check.yml
cmake/: DetectRuntime.cmake
dev-sandbox/: CMakeLists.txt  README.md
dev-sandbox/scripts/: run_test.sh
dev-sandbox/src/: async_pipeline_h2d.cpp  direct_discrete_h2d.cpp  ffts_dispatcher_minimal.cpp  ffts_dispatcher_minimal.h  ffts_h2d.cpp  simple_thread_pool.h  three_stage_h2d.cpp  three_stage_h2d_huge.cpp  three_stage_h2d_huge.h
dev-sandbox/tests/: feasibility_test.cpp  performance_benchmark.cpp
docs/: DESIGN.md
examples/: CMakeLists.txt  example.cc
module/: CMakeLists.txt
module/aclbw/: CMakeLists.txt  aclbw.cc  error_handle.h  memcpy_case.h  memcpy_initiator.h  memcpy_instance.h  memcpy_result.h  memory_buffer.h
module/aio/: CMakeLists.txt  aio_engine.h  aio_impl.cc  aio_impl.h  aio_main.cc  block_opener.h  block_type.h  error_handle.h  host_buffer.cc  host_buffer_ascend.cc  host_buffer_cuda.cc  space_layout.h
module/copy/: CMakeLists.txt  copy_buffer.h  copy_case.cc  copy_case.h  copy_initiator.h  copy_instance.h  copy_main.cc  copy_result.h  copy_runtime.h  error_handle.h
module/copy/ascend/: copy_buffer_ascend.cc  copy_buffer_ascend.h  copy_case_ascend.cc  copy_initiator_ascend.cc  copy_initiator_ascend.h  copy_instance_ascend.cc  copy_instance_ascend.h  copy_runtime_ascend.cc  error_handle_ascend.h
module/copy/cuda/: copy_buffer_cuda.cc  copy_buffer_cuda.h  copy_case_cuda.cc  copy_case_gdr_cuda.cc  copy_initiator_cuda.cc  copy_initiator_cuda.h  copy_initiator_gdr_cuda.h  copy_instance_cuda.cc  copy_instance_cuda.h  copy_kernel_cuda.cu  copy_runtime_cuda.cc  error_handle_cuda.h  gdr_context_cuda.cc  gdr_context_cuda.h
module/copy/cuda/gdr/: copy_buffer_gdr.h  copy_case_gdr.cc  copy_instance_gdr.h  error_handle_gdr.h  rdma_channel_gdr.cc  rdma_channel_gdr.h  submit_executor_gdr.h
module/copy/cuda/gdrbw/: CMakeLists.txt  error_handle.h  gdrbw.cc  memcpy_case.h  memcpy_initiator.h  memcpy_result.h  memory_buffer.h  rdma_channel.cc  submit_executor.h
module/copy/simu/: copy_buffer_simu.cc  copy_buffer_simu.h  copy_case_simu.cc  copy_initiator_simu.cc  copy_initiator_simu.h  copy_instance_simu.cc  copy_instance_simu.h
module/gdrbw/: CMakeLists.txt  gdrbw.cc  memcpy_instance.h  memcpy_result.h  rdma_channel.h
module/logger/: CMakeLists.txt  logger.cc  logger.h  logger_example.cc
module/membw/: CMakeLists.txt  benchmark_bandwidth.h  error_handle.h  membw.cc  memcpy_instance.h  memory_buffer.h
module/nvbw/: CMakeLists.txt  error_handle.h  memcpy_case.h  memcpy_initiator.h  memcpy_instance.h  memcpy_result.h  memory_buffer.h  nvbw.cc
module/nvcopy/: CMakeLists.txt  copy_buffer.h  copy_case.cc  copy_case.h  copy_initiator.h  copy_instance.h  copy_kernel.cu  copy_kernel.h  copy_result.h  error_handle.h  nvcopy.cc
module/trans/: CMakeLists.txt  trans_buffer.h  trans_case.h  trans_main.cc  trans_result.h  trans_runtime.h  trans_stopwatch.h  trans_template.h
module/trans/ascend/: trans_assert_ascend.h  trans_case_ascend.cc  trans_device_buffer_asscend.h  trans_dma_dispatcher_ascend.cc  trans_dma_dispatcher_ascend.h  trans_ffts_dispatcher.cc  trans_ffts_dispatcher.h  trans_ffts_dispatcher_ascend.cc  trans_ffts_dispatcher_ascend.h  trans_host_buffer_ascend.h  trans_runtime_ascend.cc  trans_template_ascend.h  trans_template_asscend.h  trans_thread_pool.h
module/trans/cuda/: trans_assert_cuda.h  trans_case_cuda.cc  trans_device_buffer_cuda.h  trans_host_buffer_cuda.h  trans_kernel_cuda.cu  trans_kernel_cuda.h  trans_template_cuda.h
module/trans/simu/: trans_assert_simu.h  trans_buffer_simu.h  trans_case_simu.cc  trans_runtime_simu.cc  trans_template_simu.h
transfer/: CMakeLists.txt  transfer.h
transfer/abstract/: address.h  error.h  factory.h  protocol.h  registry.h  stream.h
transfer/detail/: local_file_2_local_file_sendfile.cc
transfer/detail/address/: local_file.h
transfer/detail/protocol/: sendfile.h
