cmake_minimum_required(VERSION 3.18)
project(dev-sandbox VERSION 1.0.0 LANGUAGES CXX)

set(CUDA_ROOT "/usr/local/cuda/" CACHE PATH "Path to CUDA root directory")
set(ASCEND_ROOT "/usr/local/Ascend/ascend-toolkit/latest" CACHE PATH "Path to Ascend root directory")
find_path(CUDA_RUNTIME_API_PATH cuda_runtime.h ${CUDA_ROOT}/include)
find_library(CUDA_RUNTIME_LIB cudart ${CUDA_ROOT}/lib64)
find_path(ASCEND_RUNTIME_API_PATH acl/acl.h ${ASCEND_ROOT}/include)
find_library(ASCEND_RUNTIME_LIB ascendcl ${ASCEND_ROOT}/lib64)
if (CUDA_RUNTIME_API_PATH AND CUDA_RUNTIME_LIB)
    message(STATUS "Found CUDA runtime API: ${CUDA_RUNTIME_API_PATH}")
    set(CMAKE_CUDA_COMPILER ${CUDA_ROOT}/bin/nvcc)
    set(CMAKE_CUDA_ARCHITECTURES 75 80 86 89 90)
    enable_language(CUDA)
elseif(ASCEND_RUNTIME_API_PATH AND ASCEND_RUNTIME_LIB)
    message(STATUS "Found Ascend runtime API: ${ASCEND_RUNTIME_API_PATH}")
else()
    message(STATUS "Neither CUDA nor Ascend runtime API found.")
endif()

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(FLAGS_PUBLIC "-Wall -Werror -fPIC -Wl,-z,relro,-z,now")
set(FLAGS_DEBUG "-O0 -g")
set(FLAGS_RELEASE "-O3 -D_FORTIFY_SOURCE=2")
string(TOLOWER "${CMAKE_BUILD_TYPE}" CMAKE_BUILD_TYPE_LOWER)
if(CMAKE_BUILD_TYPE_LOWER STREQUAL "debug")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${FLAGS_PUBLIC} ${FLAGS_DEBUG}")
else()
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${FLAGS_PUBLIC} ${FLAGS_RELEASE}")
endif()

add_subdirectory(vendor)
add_subdirectory(module)
