set(ASCEND_ROOT "/usr/local/Ascend/ascend-toolkit/latest" CACHE PATH "Path to Ascend root directory")
find_path(ASCEND_RUNTIME_API_PATH acl/acl.h ${ASCEND_ROOT}/include)
find_library(ASCEND_RUNTIME_LIB ascendcl ${ASCEND_ROOT}/lib64)
if (ASCEND_RUNTIME_API_PATH AND ASCEND_RUNTIME_LIB)
    file(GLOB_RECURSE ACLBW_SOURCE_FILES "*.h" "*.cc")
    add_executable(aclbw ${ACLBW_SOURCE_FILES})
    target_include_directories(aclbw PRIVATE ${ASCEND_RUNTIME_API_PATH})
    target_link_libraries(aclbw PRIVATE fmt::fmt ${ASCEND_RUNTIME_LIB})
endif()
