add_executable(aio aio_main.cc)
set(CUDA_ROOT "/usr/local/cuda/" CACHE PATH "Path to CUDA root directory")
set(ASCEND_ROOT "/usr/local/Ascend/ascend-toolkit/latest" CACHE PATH "Path to Ascend root directory")
find_path(CUDA_RUNTIME_API_PATH cuda_runtime.h ${CUDA_ROOT}/include)
find_library(CUDA_RUNTIME_LIB cudart ${CUDA_ROOT}/lib64)
find_path(ASCEND_RUNTIME_API_PATH acl/acl.h ${ASCEND_ROOT}/include)
find_library(ASCEND_RUNTIME_LIB ascendcl ${ASCEND_ROOT}/lib64)
if (CUDA_RUNTIME_API_PATH AND CUDA_RUNTIME_LIB)
    message(STATUS "Found CUDA runtime API: ${CUDA_RUNTIME_API_PATH}")
    target_sources(aio PRIVATE host_buffer_cuda.cc)
    target_include_directories(aio PRIVATE ${CUDA_ROOT}/include)
    target_link_libraries(aio PRIVATE ${CUDA_RUNTIME_LIB})
elseif(ASCEND_RUNTIME_API_PATH AND ASCEND_RUNTIME_LIB)
    target_sources(aio PRIVATE host_buffer_ascend.cc)
    message(STATUS "Found Ascend runtime API: ${ASCEND_RUNTIME_API_PATH}")
    target_include_directories(aio PRIVATE ${ASCEND_ROOT}/include)
    target_link_libraries(aio PRIVATE ${ASCEND_RUNTIME_LIB})
else()
    message(STATUS "Neither CUDA nor Ascend runtime API found.")
    target_sources(aio PRIVATE host_buffer.cc)
endif()
