add_executable(aio aio_main.cc)
target_sources(aio PRIVATE aio_impl.cc)
target_link_libraries(aio PRIVATE fmt::fmt)
if (CUDA_RUNTIME_API_PATH AND CUDA_RUNTIME_LIB)
    target_sources(aio PRIVATE host_buffer_cuda.cc)
    target_include_directories(aio PRIVATE ${CUDA_ROOT}/include)
    target_link_libraries(aio PRIVATE ${CUDA_RUNTIME_LIB})
elseif(ASCEND_RUNTIME_API_PATH AND ASCEND_RUNTIME_LIB)
    target_sources(aio PRIVATE host_buffer_ascend.cc)
    target_include_directories(aio PRIVATE ${ASCEND_ROOT}/include)
    target_link_libraries(aio PRIVATE ${ASCEND_RUNTIME_LIB})
else()
    target_sources(aio PRIVATE host_buffer.cc)
endif()
