set(CUDA_ROOT "/usr/local/cuda/" CACHE PATH "Path to CUDA root directory")
find_path(CUDA_RUNTIME_API_PATH cuda_runtime.h ${CUDA_ROOT}/include)
find_library(CUDA_RUNTIME_LIB cudart ${CUDA_ROOT}/lib64)
if (CUDA_RUNTIME_API_PATH AND CUDA_RUNTIME_LIB)
    file(GLOB_RECURSE NVBW_SOURCE_FILES "*.h" "*.cc")
    add_executable(nvbw ${NVBW_SOURCE_FILES})
    target_include_directories(nvbw PRIVATE ${CUDA_RUNTIME_API_PATH})
    target_link_libraries(nvbw PRIVATE fmt::fmt ${CUDA_RUNTIME_LIB})
endif()
