set(CUDA_ROOT "/usr/local/cuda/" CACHE PATH "Path to CUDA root directory")
find_path(CUDA_RUNTIME_API_PATH cuda_runtime.h ${CUDA_ROOT}/include)
find_library(CUDA_RUNTIME_LIB cudart ${CUDA_ROOT}/lib64)
if (CUDA_RUNTIME_API_PATH AND CUDA_RUNTIME_LIB)
    set(CMAKE_CUDA_COMPILER ${CUDA_ROOT}/bin/nvcc)
    set(CMAKE_CUDA_ARCHITECTURES 75 80 86 89 90)
    enable_language(CUDA)
    file(GLOB_RECURSE ALL_SOURCE_FILES "*.h" "*.cc" "*.cu")
    add_executable(nvcopy ${ALL_SOURCE_FILES})
    target_include_directories(nvcopy PRIVATE ${CUDA_RUNTIME_API_PATH})
    target_link_libraries(nvcopy PRIVATE fmt::fmt ${CUDA_RUNTIME_LIB})
endif()
